[gd_scene load_steps=4 format=3 uid="uid://dyd671fyvenq3"]

[ext_resource type="Script" path="res://addons/FancyControls/testing.gd" id="1_4dv0c"]
[ext_resource type="Script" path="res://addons/FancyControls/Controls/AnimatedBoxContainer/AnimatedBoxContainer.gd" id="1_hssgr"]
[ext_resource type="Script" path="res://addons/FancyControls/Controls/AnimatedRoundContainer/AnimatedRoundContainer.gd" id="3_j83mo"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_4dv0c")

[node name="AnimatedBoxContainer" type="Control" parent="."]
custom_minimum_size = Vector2(40, 40)
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2
script = ExtResource("1_hssgr")
box_direction = 1
border_padding = null

[node name="Panel" type="Panel" parent="AnimatedBoxContainer"]
layout_mode = 0
offset_left = 28.0
offset_right = 68.0
offset_bottom = 40.0

[node name="Panel2" type="Panel" parent="AnimatedBoxContainer"]
layout_mode = 0
offset_left = 124.0
offset_right = 164.0
offset_bottom = 40.0

[node name="Panel3" type="Panel" parent="AnimatedBoxContainer"]
layout_mode = 0
offset_left = 220.0
offset_right = 260.0
offset_bottom = 40.0

[node name="Panel4" type="Panel" parent="AnimatedBoxContainer"]
layout_mode = 0
offset_left = 316.0
offset_right = 356.0
offset_bottom = 40.0

[node name="Panel5" type="Panel" parent="AnimatedBoxContainer"]
layout_mode = 0
offset_left = 412.0
offset_right = 452.0
offset_bottom = 40.0

[node name="Panel6" type="Panel" parent="AnimatedBoxContainer"]
layout_mode = 0
offset_left = 508.0
offset_right = 548.0
offset_bottom = 40.0

[node name="Panel7" type="Panel" parent="AnimatedBoxContainer"]
layout_mode = 0
offset_left = 604.0
offset_right = 644.0
offset_bottom = 40.0

[node name="Panel8" type="Panel" parent="AnimatedBoxContainer"]
layout_mode = 0
offset_left = 700.0
offset_right = 740.0
offset_bottom = 40.0

[node name="Panel9" type="Panel" parent="AnimatedBoxContainer"]
layout_mode = 0
offset_left = 796.0
offset_right = 836.0
offset_bottom = 40.0

[node name="Panel10" type="Panel" parent="AnimatedBoxContainer"]
layout_mode = 0
offset_left = 892.0
offset_right = 932.0
offset_bottom = 40.0

[node name="Panel11" type="Panel" parent="AnimatedBoxContainer"]
layout_mode = 0
offset_left = 988.0
offset_right = 1028.0
offset_bottom = 40.0

[node name="Panel12" type="Panel" parent="AnimatedBoxContainer"]
layout_mode = 0
offset_left = 1084.0
offset_right = 1124.0
offset_bottom = 40.0

[node name="AnimatedBoxContainer2" type="Control" parent="."]
custom_minimum_size = Vector2(0, 40)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_hssgr")
box_direction = 1
border_padding = null

[node name="AnimatedRoundContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -128.0
offset_right = 256.0
offset_bottom = 128.0
grow_vertical = 2
mouse_filter = 1
script = ExtResource("3_j83mo")
box_direction = 1
border_padding = Vector2(24, 24)

[node name="Panel" type="Panel" parent="AnimatedRoundContainer"]
layout_mode = 0
offset_left = 108.0
offset_top = 4.0
offset_right = 148.0
offset_bottom = 44.0

[node name="Panel2" type="Panel" parent="AnimatedRoundContainer"]
layout_mode = 0
offset_left = 181.539
offset_top = 34.4609
offset_right = 221.539
offset_bottom = 74.4609

[node name="Panel3" type="Panel" parent="AnimatedRoundContainer"]
layout_mode = 0
offset_left = 212.0
offset_top = 108.0
offset_right = 252.0
offset_bottom = 148.0

[node name="Panel4" type="Panel" parent="AnimatedRoundContainer"]
layout_mode = 0
offset_left = 181.539
offset_top = 181.539
offset_right = 221.539
offset_bottom = 221.539

[node name="Panel5" type="Panel" parent="AnimatedRoundContainer"]
layout_mode = 0
offset_left = 108.0
offset_top = 212.0
offset_right = 148.0
offset_bottom = 252.0

[node name="Panel6" type="Panel" parent="AnimatedRoundContainer"]
layout_mode = 0
offset_left = 34.4609
offset_top = 181.539
offset_right = 74.4609
offset_bottom = 221.539

[node name="Panel7" type="Panel" parent="AnimatedRoundContainer"]
layout_mode = 0
offset_left = 4.0
offset_top = 108.0
offset_right = 44.0
offset_bottom = 148.0

[node name="Panel8" type="Panel" parent="AnimatedRoundContainer"]
layout_mode = 0
offset_left = 34.4609
offset_top = 34.4609
offset_right = 74.4609
offset_bottom = 74.4609

[node name="AnimatedRoundContainer2" type="Control" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -256.0
offset_top = -128.0
offset_bottom = 128.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 1
script = ExtResource("3_j83mo")
box_direction = 1
border_padding = Vector2(24, 24)

[node name="Panel" type="Panel" parent="AnimatedRoundContainer2"]
layout_mode = 0
offset_left = 108.0
offset_top = 4.0
offset_right = 148.0
offset_bottom = 44.0

[node name="Panel5" type="Panel" parent="AnimatedRoundContainer2"]
layout_mode = 0
offset_left = 181.539
offset_top = 34.4609
offset_right = 221.539
offset_bottom = 74.4609

[node name="Panel6" type="Panel" parent="AnimatedRoundContainer2"]
layout_mode = 0
offset_left = 212.0
offset_top = 108.0
offset_right = 252.0
offset_bottom = 148.0

[node name="Panel7" type="Panel" parent="AnimatedRoundContainer2"]
layout_mode = 0
offset_left = 181.539
offset_top = 181.539
offset_right = 221.539
offset_bottom = 221.539

[node name="Panel8" type="Panel" parent="AnimatedRoundContainer2"]
layout_mode = 0
offset_left = 108.0
offset_top = 212.0
offset_right = 148.0
offset_bottom = 252.0

[node name="Panel2" type="Panel" parent="AnimatedRoundContainer2"]
layout_mode = 0
offset_left = 34.4609
offset_top = 181.539
offset_right = 74.4609
offset_bottom = 221.539

[node name="Panel3" type="Panel" parent="AnimatedRoundContainer2"]
layout_mode = 0
offset_left = 4.0
offset_top = 108.0
offset_right = 44.0
offset_bottom = 148.0

[node name="Panel4" type="Panel" parent="AnimatedRoundContainer2"]
layout_mode = 0
offset_left = 34.4609
offset_top = 34.4609
offset_right = 74.4609
offset_bottom = 74.4609

[node name="Buttons" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -64.0
offset_top = -64.0
offset_right = 64.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_j83mo")
do_rotation = false

[node name="Button2" type="Button" parent="Buttons"]
layout_mode = 2
offset_left = 14.5
offset_top = -15.5
offset_right = 113.5
offset_bottom = 15.5
text = "Swap Up"

[node name="Button3" type="Button" parent="Buttons"]
layout_mode = 2
offset_left = -49.5
offset_top = 48.5
offset_right = 49.5
offset_bottom = 79.5
text = "Swap Left"

[node name="Button" type="Button" parent="Buttons"]
layout_mode = 2
offset_left = 14.5
offset_top = 112.5
offset_right = 113.5
offset_bottom = 143.5
text = "Swap Down"

[node name="Button4" type="Button" parent="Buttons"]
layout_mode = 2
offset_left = 78.5
offset_top = 48.5
offset_right = 177.5
offset_bottom = 79.5
text = "Swap Right"

[connection signal="pressed" from="Buttons/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="Buttons/Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Buttons/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Buttons/Button4" to="." method="_on_button_4_pressed"]
